adaugare bara comparatie produse,  adaugat debounce, cautare fara diacritice